--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>W1D3 - Recipe</li>
         <li>W1D4 - Movie Review</li>
         <li>W1D5 - MP3 library</li>
-        <li>W1D6 - Movie Review PHP</li>
+        <li>W1D6 - Movie Review PHP q</li>
     </ul>
     
     <a href="http://validator.w3.org/check?https://bereketalemayehut.github.io/"> 
