--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li>W1D6 - Movie Review PHP q</li>
     </ul>
     
-    <a href="http://validator.w3.org/check?https://bereketalemayehut.github.io/"> 
+    <a href="https://validator.w3.org/check?https://bereketalemayehut.github.io/"> 
         <img src="img.png" alt="html validator"/>
     </a>
 
