--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li>W1D6 - Movie Review PHP q</li>
     </ul>
     
-    <a href="https://validator.w3.org/check?https://bereketalemayehut.github.io/index.html"> 
+    <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/index.html"> 
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
     </a>
 
