--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </ul>
     
     <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/index.html"> 
-        <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+        <img src="img.png" alt="html validator"/>
     </a>
 
 </body>
