--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Bereket Alemayehu</h1>
     <ul>
         <li>W1D1 - this HomePage</li>
-        <li>W1D2 - About Me</li>
+        <li> <a href="aboutMe.html"> W1D2 - About Me </a> </li>
         <li>W1D3 - Recipe</li>
         <li>W1D4 - Movie Review</li>
         <li>W1D5 - MP3 library</li>
