--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     </ul>
     
     <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/index.html"> 
-        <img src="img.png" alt="html validator"/>
+        <img src="img.png" alt="html validator"/> html Validator
+    </a>
+
+    <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/style1.css"> 
+        <img src="img.png" alt="html validator"/> CSS Validator
     </a>
 
 </body>
