finalizing day two
finalizing day two assignment

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -43,7 +43,11 @@
 
 
     <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/aboutMe.html"> 
-        <img src="img.png" alt="html validator" style="height: 40px; width: 75px;"/>
+        <img src="img.png" alt="html validator" style="height: 40px; width: 75px;"/> Html
+    </a>
+
+    <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/style1.css"> 
+        <img src="img.png" alt="html validator"/> CSS 
     </a>
 
 </body>
