--- a/index.html
+++ b/index.html
@@ -28,18 +28,14 @@
     <ul>
         <li>W1D1 - this HomePage</li>
         <li> <a href="aboutMe.html"> W1D2 - About Me </a> </li>
-        <li>W1D3 - Recipe</li>
+        <li><a href="Recipe.html"> W1D3 - Recipe </a> </li>
         <li>W1D4 - Movie Review</li>
         <li>W1D5 - MP3 library</li>
         <li>W1D6 - Movie Review PHP q</li>
     </ul>
     
     <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/index.html"> 
-        <img src="img.png" alt="html validator"/> html Validator
-    </a>
-
-    <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/style1.css"> 
-        <img src="img.png" alt="html validator"/> CSS Validator
+        <img src="img.png" alt="html validator"/>
     </a>
 
 </body>
