image size update
validator image size update

--- a/Recipe.html
+++ b/Recipe.html
@@ -96,7 +96,7 @@
     </a>
 
     <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/recipeCss.css"> 
-        <img src="img.png" alt="html validator"/> CSS 
+        <img src="img.png" alt="html validator" style="height: 40px; width: 75px;"/> CSS 
     </a>
 
 </body>
