--- a/aboutMe.html
+++ b/aboutMe.html
@@ -47,7 +47,7 @@
     </a>
 
     <a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/style1.css"> 
-        <img src="img.png" alt="html validator"/> CSS 
+        <img src="img.png" alt="html validator" style="height: 40px; width: 75px;"/> CSS 
     </a>
 
 </body>
