--- a/grades.html
+++ b/grades.html
@@ -15,10 +15,10 @@
          <legend id="legend">New User Sign Up</legend>
 
         <label for="name">Name</label>
-        <input type="text" name="name" id="sname"> <br><br>
+        <input type="text" name="name" id="name"> <br><br>
 
         <label for="id">ID</label>
-        <input type="text" name="id" id="sid"> <br><br>
+        <input type="text" name="id" id="id"> <br><br>
 
         <label for="assignment">Assignment</label>
         <select name="assignment" id="assignment">
@@ -28,7 +28,7 @@
         </select> <br><br>
 
         <label for="Entry">Choose Entry</label>
-        <input type="radio" name="entry" value="May">May
+        <input type="radio" name="entry" id="Entry" value="May">May
         <input type="radio" name="entry" value="August">August
         <input type="radio" name="entry" value="February">February  <br><br>
 
