confirmation id added
confirmation id added

--- a/grades.html
+++ b/grades.html
@@ -33,7 +33,7 @@
         <input type="radio" name="entry" value="February">February  <br><br>
 
         <label for="confirmation">I confirm the information mentioned above is all true and i am not lying</label>
-        <input type="checkbox" name="confirmation" > <br><br>
+        <input type="checkbox" name="confirmation" id="confirmation" > <br><br>
 
         <input type="submit" value="show result">
 
