Select option id added
os id was empty now it is setted to a value

--- a/nerdLuv.html
+++ b/nerdLuv.html
@@ -30,7 +30,7 @@
             <input type="radio" name="gender" value="Male">Male &nbsp; <input type="radio" name="gender" value="Female"> Female <br><br>
             <input type="text" name="age" size="6"> <br><br>
             <input type="text" name="personality" size="6"> (<span style="color: red;">Don't know your type?</span>) <br><br>
-            <select name="OS" id="">
+            <select name="OS" id="os">
                 <option value="Windows" selected> Windows</option>
                 <option value="Mac" > Mac</option>
                 <option value="Linux" > Linix</option>
