legend label updated
form field legend update

--- a/grades.html
+++ b/grades.html
@@ -12,7 +12,7 @@
     <form action="http://mumstudents.org/params.php" method="post">
 
      <fieldset id="fieldSet">
-         <legend id="legend">New User Sign Up</legend>
+         <legend id="legend">Student Assignment Grade</legend>
 
         <label for="name">Name</label>
         <input type="text" name="name" id="name"> <br><br>
