--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>W1D1 - this HomePage</li>
         <li> <a href="aboutMe.html"> W1D2 - About Me </a> </li>
         <li><a href="Recipe.html"> W1D3 - Recipe </a> </li>
-        <li>W1D4 - Movie Review</li>
+        <li> <a href="week_1_day_3/moveiReview.html"> W1D4 - Movie Review </a></li>
         <li>W1D5 - MP3 library</li>
         <li>W1D6 - Movie Review PHP q</li>
     </ul>
