--- a/week_1_day_3/moveiReview.html
+++ b/week_1_day_3/moveiReview.html
@@ -199,8 +199,8 @@
        
     </div>
     <div class="validation_section">
-		<a href="https://validator.w3.org/nu/?doc=https://mirkena.github.io/w1d3/tmnt.html"><img src="../image/w3c-html.png" alt="Valid HTML5" /></a> <br />
-		<a href="https://validator.w3.org/nu/?doc=https://mirkena.github.io/w1d3/css/movie.css"><img src="../image/w3c-css.png" alt="Valid CSS" /></a>
+		<a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/w1d3/tmnt.html"><img src="../img.png" alt="Valid HTML5" />html</a> <br />
+		<a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/w1d3/css/movie.css"><img src="../img.png" alt="Valid CSS" />css</a>
 	</div>
 </body>
 </html>
