--- a/week_1_day_3/moveiReview.html
+++ b/week_1_day_3/moveiReview.html
@@ -199,7 +199,7 @@
        
     </div>
     <div class="validation_section">
-		<a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/w1d3/tmnt.html"><img src="../img.png" alt="Valid HTML5" />html</a> <br />
+		<a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/w1d3/moveiReview.html"><img src="../img.png" alt="Valid HTML5" />html</a> <br />
 		<a href="https://validator.w3.org/nu/?doc=https://bereketalemayehut.github.io/w1d3/css/movie.css"><img src="../img.png" alt="Valid CSS" />css</a>
 	</div>
 </body>
