--- a/nerdLuv.html
+++ b/nerdLuv.html
@@ -28,14 +28,14 @@
         <div style="float: right; ">
             <input type="text" name="name" size="16"><br><br>
             <input type="radio" name="gender" value="Male">Male &nbsp; <input type="radio" name="gender" value="Female"> Female <br><br>
-            <input type="text" name="age" size="6"> <br><br>
+            <input type="number" name="age" min="18" max="60" size="6"> <br><br>
             <input type="text" name="personality" size="6"> (<span style="color: red;">Don't know your type?</span>) <br><br>
             <select name="OS" id="os">
                 <option value="Windows" selected> Windows</option>
                 <option value="Mac" > Mac</option>
                 <option value="Linux" > Linix</option>
             </select>   <br><br>
-            <input type="text" name="min" size="6" maxlength="3" placeholder="min"> to<input type="text" name="max" size="6" maxlength="3" placeholder="max"> <br>
+            <input type="number" name="min" size="6" maxlength="3" placeholder="min" min="18" max="60"> to<input type="number" name="max" size="6" maxlength="3" placeholder="max" min="18" max="60"> <br>
         </div>
     </fieldset>
     </form>
