--- a/week_2_day_1/ascii.html
+++ b/week_2_day_1/ascii.html
@@ -6,8 +6,8 @@
 		<title>ASCIImation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/askii.css" type="text/css" rel="stylesheet">
-		<script src="js/animations.js" type="text/javascript"></script>
-		<script src="js/askii.js" type="text/javascript"></script>
+		<script src="js/animations.js"></script>
+		<script src="js/askii.js"></script>
     </head>
 	
     <body>
