--- a/week_3_day_2/FifteenPuzle/fifteen.html
+++ b/week_3_day_2/FifteenPuzle/fifteen.html
@@ -42,11 +42,11 @@
 		</p>
 
 		<div id="w3c">
-            <a href="https://validator.w3.org/check?uri=https://afeworkt.github.io/cs472/13puzzle/fifteen.html">
+            <a href="https://validator.w3.org/check?uri=https://bereketalemayehut.github.io/week_3_day_2/FifteenPuzle/fifteen.html">
                 <img src="w3c-html.png" alt="html validator" >
             </a>
             <a
-                href="http://jigsaw.w3.org/css-validator/validator?uri=https://afeworkt.github.io/cs472/13puzzle/fifteen.css">
+                href="http://jigsaw.w3.org/css-validator/validator?uri=https://bereketalemayehut.github.io/week_3_day_2/FifteenPuzle/fifteen.css">
                 <img src="w3c-css.png" alt="css validator" >
             </a>
 			<a href="https://webster.cs.washington.edu/jslint/?referer">
